--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,9 @@
     <title>Kits Generator - Rust Style</title>
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <style>
+	    selector {
+  background-image: url('https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzFqc3M1eHJ5cXZvZ3FxZWJkOHd6b3RiYjhjY3c0MjRqM3ZxcXdrdyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/yyPobjZJ0sk5W/giphy.gif');
+}
 	body {
 		font-family: 'Russo One', sans-serif;
 		background-color: #00000000;
