--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,7 @@
     <title>Kits Generator - Rust Style</title>
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <style>
-	    selector {
-  background-image: url('https://i.redd.it/d2hd73xxwvaa1.jpg');
-}
+	    <link rel="preload" as="gif" href="https://media0.giphy.com/media/yyPobjZJ0sk5W/200.webp?cid=790b7611y6kvy05haigrbvku4kr77461lf86n25dsxk22xyj&ep=v1_gifs_search&rid=200.webp&ct=g">
 	body {
 		font-family: 'Russo One', sans-serif;
 		background-color: #00000000;
