--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>Kits Generator - Rust Style</title>
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <style>
-	    <link rel="preload" as="gif" href="https://media0.giphy.com/media/yyPobjZJ0sk5W/200.webp?cid=790b7611y6kvy05haigrbvku4kr77461lf86n25dsxk22xyj&ep=v1_gifs_search&rid=200.webp&ct=g">
+	    
 	body {
 		font-family: 'Russo One', sans-serif;
 		background-color: #00000000;
@@ -16,6 +16,8 @@
 		margin-left: 0vw;
 		padding: 20px;
 		transition: background-color 0.5s ease-in-out;
+		background-image: url('https://media0.giphy.com/media/yyPobjZJ0sk5W/200.webp?cid=790b7611y6kvy05haigrbvku4kr77461lf86n25dsxk22xyj&ep=v1_gifs_search&rid=200.webp&ct=g');
+                background-size: contain;
 	}
 
 	h3 {
