--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 		margin-left: 0vw;
 		padding: 20px;
 		transition: background-color 0.5s ease-in-out;
-		background-image: url('https://media0.giphy.com/media/yyPobjZJ0sk5W/200.webp?cid=790b7611y6kvy05haigrbvku4kr77461lf86n25dsxk22xyj&ep=v1_gifs_search&rid=200.webp&ct=g');
+		background-image: url('https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjA4OGV0dnMzMmFmcnd0ZzUyZjF4c2ZhYjhoNDdrcWJmcXp3a3UycCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Co4o0MS48vsJibPvQ4/giphy.gif');
                 background-size: contain;
 	}
 
