--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,8 @@
 		padding: 20px;
 		transition: background-color 0.5s ease-in-out;
 		background-image: url('https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjA4OGV0dnMzMmFmcnd0ZzUyZjF4c2ZhYjhoNDdrcWJmcXp3a3UycCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Co4o0MS48vsJibPvQ4/giphy.gif');
-                background-position: center bottom;
+	        background-size: contain;
+    }
 	}
 
 	h3 {
